Animal_shelter/force-app/main/default/objects/Medical_Record__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>