Animal_shelter/force-app/main/default/objects/Medical_Record__c/fields/Vet__c.field-meta.xml
<CustomField>
    <fullName>Vet__c</fullName>
    <label>Vet</label>
    <referenceTo>Vet__c</referenceTo>
    <relationshipLabel>Medical Records</relationshipLabel>
    <relationshipName>Medical_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>